# mmi

./: .gitignore  CMakeLists.txt  HostSecure.pro  main.cpp  mmi.pro
connectivity/include/: DatabaseHandler.hpp  EdgeHandler.hpp  MmiHandler.hpp  MqttInterface.hpp
qml/Common/: Colors.qml  Common.qrc  Icon.qml  SizeTestRectangle.qml  TransparentPane.qml  VerticalTabBar.qml  qmldir
qml/IconTheme/: IconTheme.qrc
qml/IconTheme/icons/HostSecureIcons/: index.theme
qml/Images/: Images.qrc
qml/main/: DeviceView.qml  EdgeView.qml  HomeView.qml  MainView.qml  MqttStatus.qml  TopBar.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/: commonutils.cpp  commonutils.h  devicemodel.cpp  devicemodel.h  edgemodel.cpp  edgemodel.h  hostsecurecollection.cpp  hostsecurecollection.h  mmimqttclient.cpp  mmimqttclient.h  usbdevicemodel.cpp  usbdevicemodel.h
